Closed Bug 713597 Opened 14 years ago Closed 14 years ago

Crash removing full-screen element during "resize" event

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: jruderman, Assigned: cpearce)

Details

(Keywords: assertion, crash, testcase)

Attachments

(3 files)

Attached file testcase
The first assertion is like in bug 698340, but the other issues are new. ###!!! ASSERTION: Unnecessary MakeFullScreen call: 'mFullScreen != aFullScreen', file widget/src/cocoa/nsCocoaWindow.mm, line 1163 ###!!! ASSERTION: Full-screen element should be the requested element!: 'GetFullScreenElement() == aElement', file content/base/src/nsDocument.cpp, line 8921 ###!!! ASSERTION: Should be full-screen doc: 'IsFullScreenDoc()', file content/base/src/nsDocument.cpp, line 8922 Null deref crash [@ nsDocument::RequestFullScreen], but only in debug builds?
Attached file stack traces
This crash only occurs in debug builds. In nsDocument::RequestFullScreen My assertions need to be before the call to SetWindowFullScreen(), as that can run script which cancels full-screen, invalidating the assertions.
Assignee: nobody → chris
Status: NEW → ASSIGNED
Attachment #585967 - Flags: review?(bugs)
Attachment #585967 - Flags: review?(bugs) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: