Bug 713597 - Move assertions around so that they don't null pointer deref when full-screen exits during full-screen request. r=smaug